migrated guava predicate to java 8 predicate in dynamics